Upgrade to version 2.0.0
* Update minimum Terraform version to 0.12.x
* Support DataDog metrics as data source for the queue backlog metric
* Add example of lambda-function usage.
* Add example of autoscaling + lambda-function working together.

PLAT-2162

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,9 @@
 version: 2.1
 
 jobs:
-  lint-12:
+  lint:
     docker:
-      - image: hashicorp/terraform:0.12.2
+      - image: hashicorp/terraform:0.12.5
     steps:
       - checkout
       - run:
@@ -15,20 +15,6 @@ jobs:
       - run:
           name: Validate
           command: terraform validate
-  lint-11:
-    docker:
-      - image: hashicorp/terraform:0.11.11
-    steps:
-      - checkout
-      - run:
-          name: Init
-          command: terraform init -backend=false
-      - run:
-          name: Lint
-          command: terraform fmt -check=true -diff=true
-      - run:
-          name: Validate
-          command: terraform validate -check-variables=false
   tag:
     machine: true
     parameters:
@@ -56,13 +42,11 @@ workflows:
   version: 2
   primary:
     jobs:
-      - lint-11
-      - lint-12
+      - lint
       - tag:
           requires:
-            - lint-11
-            - lint-12
-          version: "1.0.1"
+            - lint
+          version: "2.0.0"
           filters:
             branches:
               only:
